Fix grid gap for responsive, make button fully clickable. Better text for CLI

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -146,7 +146,7 @@ main.p-6,
 
 .tailwindcss .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
-  column-gap: 1rem;
+  gap: 1rem;
 }
 
 .tailwindcss .grid-cols-2 {
@@ -346,12 +346,12 @@ main.max-w-screen-lg {
 @media (min-width: 768px) {
   .tailwindcss .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-    column-gap: 1rem;
+    gap: 1rem;
   }
 
   .tailwindcss .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    column-gap: 1rem;
+    gap: 1rem;
   }
 
   main.md\:p-10,
@@ -801,10 +801,12 @@ h1 {
   gap: 10px;
   border-radius: 8px;
   background: linear-gradient(255deg, #444CE7 0%, #B664FF 100%);
+  cursor: pointer;
 }
 
-.cloud-button a {
+.cloud-button {
   color: var(--White, #FFF);
+  text-decoration: none;
 }
 
 .core-concepts-info {
